--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/images/favicons/ficon.png" />
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/images/favicons/favicon-32x32.png" /> -->
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/images/favicons/favicon-16x16.png" /> -->
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/images/favicons/ficon.png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Gardnma HTML 5 Template " />
     
@@ -62,7 +64,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>Hirwai</title>
+    <title>Hirwai Landscap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
