--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/images/favicons/ficon.png" />
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/images/favicons/ficon.png" /> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/images/favicons/favicon-32x32.png" /> -->
     <!-- <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/images/favicons/favicon-16x16.png" /> -->
-    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/images/favicons/ficon.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/images/favicons/favicon1.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Gardnma HTML 5 Template " />
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/tiny-slider/tiny-slider.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/vegas/vegas.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/thm-icons/style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/thm-icons/style2.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/slick-slider/slick.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/language-switcher/polyglot-language-switcher.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/reey-font/stylesheet.css">
