--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/vegas/vegas.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/thm-icons/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/thm-icons/style2.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/thm-icons/style3.css">
+
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/slick-slider/slick.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/language-switcher/polyglot-language-switcher.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/vendors/reey-font/stylesheet.css">
