--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/images/favicons/favicon1.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Gardnma HTML 5 Template " />
+    <meta name="description" content="Hirwai HTML 5 Template " />
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
