--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,9 @@
     <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/images/favicons/favicon1.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/assets/images/favicons/site.webmanifest" />
-
+    <meta name="description" content="Hirwai Landscape"/>
     
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- fonts -->
